Update 06.17- Response Rule.md

--- a/en/flows/06.17- Response Rule.md
+++ b/en/flows/06.17- Response Rule.md
@@ -1,10 +1,8 @@
 The response rules will evaluate the operator designated for the rule set. Remember the RuleSets article, for each RuleSet, is designated a different operator. On the example below, a RuleSet response evaluates the received message or the operator @step.value. A ruleset provides a series of tests that can be executed on the selected operator. For example, the ‘has any of these words’ try the operator for any designated word. RuleSets are executed from left to right (top-down). The first rule correspondent will start the execution. RapidPro evaluates word-by-word, and just once in an individual rule using the original string order.
 
-INSERIR IMAGEM
+![](/img/flow/flow53.png)
 
 If the operator corresponds to a RuleSet, the contact will pass through the category attributed to a rule. On the example below, the RuleSet is waiting for a received message, that will evaluate the response rules attributed to an adult, child and other categories. Notice that a flow will always correspond to at least a response rule in a rule set, and the last response rule will always be a catch-all(other). The passage for the categories is represented on the analises guide, as the flow editor (for example, how many times a contact passed for Yes or No in a RuleSet that evaluate the yes or no questions).
-
-INSERIR IMAGEM
 
 Notice that, the response rule combining with categories names will be represented as a category into the rule set from a flow editor.
 
@@ -28,11 +26,11 @@ You can use the “has a phone number” to validates the answer including somet
 In some cases, to validate an identification number or a coupon code, you can need a more complicated rule to determine if this is a validate answer. Regex is a standard used to describe an acceptable presentation format. A big resource to test your regular expressions is Regex101, that allow you to test any answer waited for a regular expression.
 For example, if we are asking someone to introduce a serial number from the registered device.
 
-INSERT A PRINT
+![](/img/flow/flow54.png)
 
 We know that the validates serial number should start with the “U” and has exactly nine digits, so we can verificate the serial numbers using:
 
- INSERT A PRINT
+![](/img/flow/flow55.png)
  
 ## Observations about regular expressions: ##
 
@@ -45,12 +43,12 @@ The value saved on the flow will be the group 0.
 Notice that, although collect a unique response to a question with various options, you can use the “has a number equal to” to catch multiple choose with an only one answer. There is an example:
 Choose your favorite color: “Send a message” below ask the user to choose his favorite color, or select multiples if he has more than one. Each choose is coded by a number, that allows you to collect different selections in numerical order. This will avoid the necessity to answer all possible combinations.
  
-INSERT A PRINT
+![](/img/flow/flow56.png)
  
 The split step correspondent could use “has a number equal to” to categorize all possible answers:
 
-INSERT A PRINT
+![](/img/flow/flow57.png)
  
 Any answer that not corresponds to the response rules above will be classified as “Other”. You can redirect a loop to connect the “Other” with a message reaffirming an acceptable answer format, so give the user the opportunity to answer correctly.
  
-INSERT A PRINT
+![](/img/flow/flow58.png)
