--- a/en/flows/06.18-Starting a Webhook.md
+++ b/en/flows/06.18-Starting a Webhook.md
@@ -12,7 +12,7 @@ For example, if you configure a webhook on the beginning of your flow to look fo
 }
 You will be able to make references to this key in any step on the flow through the variable @extra, for example, @Extra.status.
 
-INSERT A PRINT
+![](/img/flow/flow59.png)
 
 On this example, we can show how to configure a flow to look for a request and conduct the contact comparing with results. You can go on with the flow “Order Status Checker” located on the flows guide into your account.
 
@@ -20,38 +20,35 @@ On this example, we can show how to configure a flow to look for a request and c
 
 Create a RuleSet that collects the value-target from your contacts and saves as a flow variable. On the example below, we are creating a Wait for Response RuleSet that will collect the requests numbers from our contacts and save them as a flow variable @flow.pedido: 
 
-INSERT A PRINT
+![](/img/flow/flow60.png)
  
 ## Look for external data ##
 
 Create a webhook call, alter the “POST” request, and type a URL containing the JSON keys that you want to call:
 
-INSERT A PINT
+![](/img/flow/flow61.png)
 
 The JSON coincides with an order number presented by your contacts using the flow variable @flow.request that will be saved to “webhook request” @flow.order_webhook. The action registers into the simulator will show them that the values are being developed.
- 
-INSERT A PRINT
  
 ## Evaluate an External Variable ##
 
 After that, we should a slip for RuleSet that evaluates one of the returned values against the response. On the example below the status key @extra.status only contains one of the three values (Shipped, Pending, Cancelled), we can use the Has All These Words to discern which value will return to the contact.
  
-INSERT A PRINT
+![](/img/flow/flow62.png)
  
 If the status value returned is the same as the “Send”, “pending” or “canceled”, the contact will follow in conformity. On the contrary, the contact will pass through the “others” category and receive an order to resend a @flow.status value:
 
-INSERT A PRINT
  
 ## Visualizing Webhook Logs ##
 
 To visualize the webhook logs, go to the account page, click on the webhook icon, after that, click on the “API Register” on the bottom right:
 
-INSERT A PRINT
+![](/img/flow/flow63.png)
 
 In your recent events will be listed in the chronological order with the type of event, status, channel, and attempts.
 
-INSERT A PRINT
+![](/img/flow/flow64.png)
 
 You can click on the event to see the order content and the JSON proprieties correspondents.
 
-INSERT A PRINT
+![](/img/flow/flow65.png)
