Update 06.22-Visualizing and Exporting Variables.md

--- a/en/flows/06.22-Visualizing and Exporting Variables.md
+++ b/en/flows/06.22-Visualizing and Exporting Variables.md
@@ -1,19 +1,19 @@
 ## Visualizing Results ##
 When your contacts interact with a flow, your answers will be storage as a flow result that you can access selecting “Results”  on the drop-down menu on the configure icon on the flow editor.
 
-INSERT A PRINT
+![](/img/flow/flow70.png)
 
 The resulting page will provide a “Download” button and a list with all contacts that interact with the flow and how many time it happened. The passages through a flow (all activities that happen in) constitutes a flow:
 They complete the flow;
 Start another flow through Start Another Flow Action, or;
 Expires the flow after an inactive period (you determine it).
 
-INSERT A PRINT
+![](/img/flow/flow71.png)
  
 ## Visualizing Runs ##
 Clicking on the contact Runs value from a contact that will  leave you to a page that shows the content from each Run, through a simulator.
 
-INSERT A PRINT
+![](/img/flow/flow72.png)
 
 Runs comprehend the lines that compound your exporting results spreadsheet where each column will contain the following information:
 
@@ -24,19 +24,17 @@ Runs comprehend the lines that compound your exporting results spreadsheet where
 - The moment when your Run finished
 - and the responses for each question
 
-INSERT A PRINT
-
 ## Exporting the results from multiple flows ##
 
 To export results from various flows, go to the “flows” guide and select the flows boxes that you would like to export, after that, click on the exportation icon that is located on the top of your flows when you select one or more flows.
 
-INSERT A PRINT
+![](/img/flow/flow73.png)
 
 ## Downloading the results ##
 
 After click on the “Download Resulting” button, the flow exportation resulting dialog box will appear.
 
-INSERT A PRINT
+![](/img/flow/flow74.png)
 
 **Here, you can opt for:**
 
@@ -54,11 +52,11 @@ Contacts: The contacts guide show the last run values (and the last value for ea
 **Messages:** On the messages, guide is showed all send messages from or to your contacts flow. It provides the message direction (IN/OUT), text, date, and contact information.
 Here is a example how the executed guide from an exportation spreadsheet can appear:
 
-INSERT A PRINT
+![](/img/flow/flow75.png)
 
 **Here are the attributes answers on the split step that categorize the responses to this message (age):**
 
-INSERT A PRINT
+![](/img/flow/flow76.png)
 
 Each response is presented in three columns - Category, value, and text:
 
