--- a/en/channels/02.01-Channels Introduction.md
+++ b/en/channels/02.01-Channels Introduction.md
@@ -1,6 +1,6 @@
 # Channels intro
 
-Channels allow you to send and receive messages and calls through the plataform, you can connect how many channels as you want. Each channel has a different transfer tax (amount of messages sent by second).
+Channels allow you to send and receive messages and calls through the platform, you can connect how many channels as you want. Each channel has a different transfer tax (amount of messages sent by second).
 
 ### Channels Type
 
@@ -8,7 +8,7 @@ The available channels can be separated by Aggregator (SMS and Voice), Android P
 
 ### Aggregator (SMS and Voice)
 
- Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected on your RapidPro account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators (the can answer a lot of countries), Clickatell and Zenvia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators usually are cheaper than global aggregators).
+ Aggregators are services that process messages through multiples operators efficiently and faster. It processes virtual numbers and codes that are easily connected on your RapidPro account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators (the can answer a lot of countries), Clickatell and Zenvia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators usually are cheaper than global aggregators).
 
 **SMS:** We recommend to buy a free virtual number by Twilio to implement the SMS service on USA and Canada, to more locals we recommend to buy a conventional number. This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second, Click here to see if Twilio offer virtual numbers to SMS in your country.
 
