--- a/en/channels/02.06-Adding an e-Mail channel.md
+++ b/en/channels/02.06-Adding an e-Mail channel.md
@@ -8,11 +8,11 @@ That's an exclusive feature, available only on [Push](https://push.ilhasoft.mobi
 
 At the same session where other channels can be added, you'll find and option to add the e-mail channel.
 
-![AddEmailOption](img "Click on Email")
+![AddEmailOption](img/channel/email_addoption.png "Click on Email")
 
 Similar to connecting an e-mail account to a e-mail client, you'll need to set the connection parameters as seen bellow.
 
-![SetEmailChannel](img "Fill all field with your account details")
+![SetEmailChannel](img/channel/email_addoption.png "Fill all field with your account details")
 
 After that, just click **Submit** and the channel will be added.
 
