--- a/en/surveyor/13.02-Creating a flow to a surveyor.md
+++ b/en/surveyor/13.02-Creating a flow to a surveyor.md
@@ -1,16 +1,12 @@
-Surveyor Flows differ from SMS or voice that is destined to be used into the Surveyor Android Application where the internet and cell phone signal are weak or non-existent. The send messages are immediately answered, and the flows results are saved until you are able to send to the ilhapush account through the internet. Notice that, the Surveyors flows are started through the Surveyor Android App.
+Surveyor Flows differ from SMS or voice that is destined to be used into the Surveyor Android Application where the internet and cell phone signal are weak or non-existent. The send messages are immediately answered, and the flows results are saved until you are able to send to the account through the internet. Notice that, the Surveyors flows are started through the Surveyor Android App.
 
 ## Creating a flow ##
 1- To create a flow, go to Flows guide and select “Create a Flow”
 
 2- On the Create Flow window, choose the name of the flow and the option “Execute the finished flow” choose “Surveyor”
-
-INSERT A PRINT
  
 3- Access your flow and select an option to edit the flow. 
- 
-INSERT A PRINT
- 
+  
 Notice that in “Create a contact” we have two options to create contacts:
 
 **1- For each run:** by default, the new Surveyor flow will create a new contact to each execution concluded. You can use the action Actualize Contact to save each word presented in the contact profile. The use case intention is used to allow enumerators, project managers, and M&A officials to collect information about a person, place, things or ideas and save the results as a contact.
