Update 11.01- Introduction to Twitter Channel.md

--- a/en/twitter/11.01- Introduction to Twitter Channel.md
+++ b/en/twitter/11.01- Introduction to Twitter Channel.md
@@ -6,4 +6,4 @@ Manager your followers allow you to connect your Twitter account, that constitut
 
 INSERT A PRINT
  
-All direct messages received are stored automatically, and you will be able to send a direct message to the contacts using your twitter if your account is enabled to receive a direct message from anybody. For example, if a follower sends a direct message containing a keyword trigger that starts one of the flows, they will receive an answer as they would do via SMS. Alternatively, you can create a trigger that sends a flow or a message to anybody that you want to follow. This is how we structure our ilhapush account.
+All direct messages received are stored automatically, and you will be able to send a direct message to the contacts using your twitter if your account is enabled to receive a direct message from anybody. For example, if a follower sends a direct message containing a keyword trigger that starts one of the flows, they will receive an answer as they would do via SMS. Alternatively, you can create a trigger that sends a flow or a message to anybody that you want to follow. This is how we structure our account.
