--- a/en/messages/03.01-Messages Introduction.md
+++ b/en/messages/03.01-Messages Introduction.md
@@ -1,4 +1,4 @@
-Messages are the interactions realized when you send or receive a message using your contacts or IlhaPush App. Similar to your email account, the IlhaPush allows you to visualize the messages, archived them and keep the calls received background so you can return. All messages are organized on the left side of the page.
+Messages are the interactions realized when you send or receive a message using your contacts or App. Similar to your email account, the platform allows you to visualize the messages, archived them and keep the calls received background so you can return. All messages are organized on the left side of the page.
 
 ![](/img/messages/msg1.png)
 
