added email channel content

--- a/en/channels/02.01-Channels Introduction.md
+++ b/en/channels/02.01-Channels Introduction.md
@@ -1,22 +1,22 @@
-# Channels intro
+<div class="align-justify">
 
-Channels allow you to send and receive messages and calls through the platform, you can connect how many channels as you want. Each channel has a different transfer tax (amount of messages sent by second).
+Channels allow you to send and receive messages and calls through the plataform, you can connect how many channels as you want. Each channel has a different transfer tax (amount of messages sent by second.
 
 ### Channels Type
 
-The available channels can be separated by Aggregator (SMS and Voice), Android Phone (SMS), the Apps (Surveyor, Twitter, Telegram e Facebook).
+The available channels can be separated by Aggregator (SMS and Voice), Android Phone (SMS), the Apps (Surveyor App, Twitter, Telegram e Facebook).
 
 ### Aggregator (SMS and Voice)
 
- Aggregators are services that process messages through multiples operators efficiently and faster. It processes virtual numbers and codes that are easily connected on your platform account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators (the can answer a lot of countries), Clickatell and Zenvia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators usually are cheaper than global aggregators).
+ Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected on your RapidPro account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators (the can answer a lot of countries), Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators usually are cheaper than global aggregators).
 
 **SMS:** We recommend to buy a free virtual number by Twilio to implement the SMS service on USA and Canada, to more locals we recommend to buy a conventional number. This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second, Click here to see if Twilio offer virtual numbers to SMS in your country.
 
-**Voice:** It is supported when your Twilio account is connected with your platform Account. Use a Twilio number with voice available (can be by default or toll-free) to send and receive voice messages or connect your Twilio voice and an Android Phone with your platform account.
-You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word “Hey”. Notice that this is a number located in the USA.
+**Voice:** It is supported when your Twilio account is connected with your RapidPro Account. Use a Twilio number with voice available (can be by default or toll-free) to send and receive voice messages or connect your Twilio voice and an Android Phone with your RapidPro account.
+You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word “Hey”. Notice that this is a number located in the USA. 
 Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25% discount to unprofitable organizations.
 
-**Android Phone(SMS):** The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your platform account. When your platform account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your platform account. You can send until 330 messages by an hour.2
+**Android Phone(SMS):** The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your RapidPro account. When your RapidPro account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your RapidPro account. You can send until 330 messages by an hour.
 
 ### Good for who
 
@@ -27,11 +27,11 @@ Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25%
 
 ### Bulk Sending
 
-This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. It implicates in to create and connect a Nexmo account for your platform account. When you enable the Sending Bulk, Nexmo will take care of your sending messages, keeping the sender identification in your Android Cell Phone, and your Android will take care of the received messages. The transfer tax is a message per second. Click here to get more information about the Nexmo development in your country.
+This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. It implicates in to create and connect a Nexmo account for your RapidPro account. When you enable the Sending Bulk, Nexmo will take care of your sending messages, keeping the sender identification in your Android Cell Phone, and your Android will take care of the received messages. The transfer tax is a message per second. Click here to get more information about the Nexmo development in your country.
 
 ### Surveyor
 
-The Surveyor Android App allows that you monitor the platform workflow to glean offline data using an Android CellPhone.
+The Push Surveyor Android App allows that you monitor the RapidPro workflow to glean offline data using an Android CellPhone.
 
 ### Telegram
 
@@ -43,6 +43,8 @@ Connect your twitter account and send up to 1000 direct messages per day through
 
 ### External API
 
-The API channel allows sending and receiving messages through external suppliers (there are more APIs not listed when the user wants to add a channel). This could be a chat/external message service or an aggregator not listed (although we are inclined to integrate with the case have a compromise of at least 100.000 credits).
-For example, if you want to enjoy the automation the platform provides through an external service, you could write a link to your system and connect them through your external API, then send and receive messages between the external service.
+The API channel allows sending and receiving messages through external suppliers (there are more APIs not listed when the user wants to add a channel). This could be a chat/external message service or an aggregator not listed (although we are inclined to integrate with the case have a compromise of at least 100.000 credits). 
+For example, if you want to enjoy the automationRapidPro provides through an external service, you could write a link to your system and connect them through your API. RapidPro external, then, send and receive messages between the external service.
 As your contacts have the URN, type how your channel was configured, we will send messages using an extreme point to configure.
+
+</div>
