--- a/en/channels/02.06-Adding an e-Mail channel.md
+++ b/en/channels/02.06-Adding an e-Mail channel.md
@@ -12,9 +12,12 @@ At the same session where other channels can be added, you'll find and option to
 
 Similar to connecting an e-mail account to a e-mail client, you'll need to set the connection parameters as seen bellow.
 
-![SetEmailChannel](/img/channel/email_addoption.png "Fill all field with your account details")
+![SetEmailChannel](/img/channel/email_AccountSetup.png "Fill all field with your account details")
 
 After that, just click **Submit** and the channel will be added.
 
-## Examples
+## Example
 
+With the email channel, your can centralize your chats and use the same Flow's messages and actions to reply to your audience. If necessary you can sort contacts by the channel name using the expression @channel.name
+
+![SortChannelName](/img/channel/email_example.png "Using a Split by expression @channel.name")
