--- a/en/channels/02.01-Channels Introduction.md
+++ b/en/channels/02.01-Channels Introduction.md
@@ -3,10 +3,12 @@
 Channels allow you to send and receive messages and calls through the plataform, you can connect how many channels as you want. Each channel has a different transfer tax (amount of messages sent by second.
 
 ### Channels Type
-<p>The available channels can be separated by Aggregator (SMS and Voice), Android Phone (SMS), the Apps ( Surveyor, Twitter, Telegram e Facebook).  
+
+The available channels can be separated by Aggregator (SMS and Voice), Android Phone (SMS), the Apps ( Surveyor, Twitter, Telegram e Facebook).  
 
 ### Aggregator (SMS and Voice)
- <p>Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected on your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators (the can answer a lot of countries), Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators usually are cheaper than global aggregators).</p>
+
+ Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected on your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators (the can answer a lot of countries), Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators usually are cheaper than global aggregators).
 
 **SMS:** We recommend to buy a free virtual number by Twilio to implement the SMS service on USA and Canada, to more locals we recommend to buy a conventional number. This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second, Click here to see if Twilio offer virtual numbers to SMS in your country.
 
@@ -14,17 +16,19 @@ Channels allow you to send and receive messages and calls through the plataform,
 You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word “Hey”. Notice that this is a number located in the USA. 
 Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25% discount to unprofitable organizations.
 
-**Android Phone(SMS):** The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send until 330 messages by an hour. 
+**Android Phone(SMS):** The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send until 330 messages by an hour.
 
 - Want to send a message immediately;
 - Are developing a service that is waited to send more than 330 messages per hour;
 - Want to implement in a country where the virtual numbers and shortcodes are not available yet.
 - Transmitter tax is a message per second.
 
-### Sending Bulk:
+### Bulk Sending
+
 This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. It implicates in to create and connect a Nexmo account for your account. When you enable the Sending Bulk, Nexmo will take care of your sending messages, keeping the sender identification in your Android Cell Phone, and your Android will take care of the received messages. The transfer tax is a message per second. Click here to get more information about the Nexmo development in your country.
 
 ### Surveyor
+
 The Push Surveyor Android App allows that you monitor the workflow to glean offline data using an Android CellPhone.
 
 ### Telegram
@@ -37,8 +41,8 @@ Connect your twitter account and send up to 1000 direct messages per day through
 
 ### External API
 
-The API channel allows sending and receiving messages through external suppliers (there are more APIs not listed when the user wants to add a channel). This could be a chat/external message service or an aggregator not listed (although we are inclined to integrate with the case have a compromise of at least 100.000 credits). 
-For example, if you want to enjoy the platform automation provides through an external service, you could develop a link to your system and connect them through your API. 
+The API channel allows sending and receiving messages through external suppliers (there are more APIs not listed when the user wants to add a channel). This could be a chat/external message service or an aggregator not listed (although we are inclined to integrate with the case have a compromise of at least 100.000 credits).
+For example, if you want to enjoy the platform automation provides through an external service, you could develop a link to your system and connect them through your API.
 
 As your contacts have the URN, type how your channel was configured, we will send messages using an extreme point to configure.
 
