--- a/en/channels/02.07-Adding Viber channel.md
+++ b/en/channels/02.07-Adding Viber channel.md
@@ -3,7 +3,7 @@ You can add your a Viber's public account as a channel on the platform.
 
 ## Starting the process
 
-At the workspace's properties choose add channel
+At the workspace's properties choose to add channel
 
 ![AddChannel](/img/channel/Add_channel.png "Add a new channel")
 
@@ -19,7 +19,7 @@ The main process resides in approving a Viber's public account and gather the Ap
 
 ## Creating a the Viber account
 
-Install Viber's mobile app and go through registration process for your mobile phone number.
+Install Viber's mobile app and go through the registration process for your mobile phone number.
 
 Having a valid account, access [Viber's admin panel](https://partners.viber.com/login) and link it to a Public account.
 
@@ -49,6 +49,6 @@ Now go back to channel's adding process, paste the token and hit Submit.
 
 ## Publish the account
 
-A final step is necessary on the Public account. Go to Viber's app on the mobile phone, open **More**, select **Discover** and open *Mine* tab. Select the page we just created and you'll see a **Publish** option, that's needed to be enable so tha page can be found in searches.
+A final step is necessary on the Public account. Go to Viber's app on the mobile phone, open **More**, select **Discover** and open *Mine* tab. Select the page we just created and you'll see a **Publish** option, that's needed to be enabled so the page can be found in searches.
 
 </div>
