updated Triggers content

--- a/en/triggers/07.01-Introduction to Triggers.md
+++ b/en/triggers/07.01-Introduction to Triggers.md
@@ -1,4 +1,4 @@
-Triggers allow the user to start flows based on user actions or schedules. There are different types of triggers and some of them just will be available when a compatible channel is added to your organization. The most common is a keyword. Can works when a word is configured for the first messages word or the only one, it is used to start a flow or add a contact to a group.
+Triggers allow you to control your flows, defining when and how they will be started. A flow can be triggered by a contact when he starts a conversation or after a missed call. Learn more about triggers using your documentation.
 
 - In “keyword” you can define a word to works as a keyword;
 - In “trigger when”, you will choose between two options: 
