--- a/en/triggers/07.02- Creating a Message Keyword that Launches a Flow.md
+++ b/en/triggers/07.02- Creating a Message Keyword that Launches a Flow.md
@@ -1,5 +1,4 @@
-The keyword is the first word in a message and can be used to start the flow. For example, you can define a trigger using the keyword “get in” to start flow to register contacts in your service.
-
+When a contact send a message that start with the keyword or contains only the keyword you set to trigger a particular flow this flow will be launched. 
 ## To create a new keyword trigger: ##
 
 1. Go to the guide **“Triggers”**, click on the box **“Create Trigger”**;
@@ -10,15 +9,15 @@ The keyword is the first word in a message and can be used to start the flow. Fo
 
 ![](/img/triggers/triggers2.png)
 
-3. In **“keyword”** you can define a word to works as a keyword;
+3. In **“keyword”** you can define the word you want to use as a keyword;
 
 4. In **“trigger when”**, you will choose between two options: 
-- The message starts with the keyword: If the phrase typed for the user starts with a keyword, the chosen flow will trigger;
-- The message contains only the keyword: The chosen flow will trigger if the user type just the keyword;
+- The message starts with the keyword: If the phrase typed for the contact starts with a keyword, the chosen flow will be triggered;
+- The message contains only the keyword: The chosen flow will be triggered only if the contact type just the keyword set by you;
 
-5. In **“Flow”**, is defined the flow that will start when you use the keyword;
+5. In **“Flow”**, is defined the flow that will start when the contact use the keyword;
 
-6. In **only groups”**, is possible to apply the rules from this trigger to specific contact groups, just leave the blank space if you want to apply this rule to all user;
+6. In **Only groups”**, is possible to apply the rules from this trigger to specific contact groups, just leave the blank space if you want to apply this rule to all user;
 
 7. Click on the box **“Create Trigger”**.
 
