--- a/en/triggers/07.03- Creating a Message Keyword that Allows People to Join a Group.md
+++ b/en/triggers/07.03- Creating a Message Keyword that Allows People to Join a Group.md
@@ -1,4 +1,4 @@
-Use this trigger to add join contact in a group. This trigger is useful to manager contacts that want to disjoin a group using the keywords *“stop”* or *“unregister”*.
+Use this trigger to add contacts to a group. This trigger is useful to manager contacts that want to disjoin a group using the keywords *“quit”* or *“unregister”*.Use this trigger to add join contact in a group. 
 
 **To create a trigger with a keyword that joins contacts into a group:**
 
@@ -12,7 +12,7 @@ Use this trigger to add join contact in a group. This trigger is useful to manag
 
 3. Introduce a keyword in “Join a Keyword”;
 4. Choose the group that you would like to add to your contacts in “Group to Join”;
-5. Optional: In “Response”, you can choose a message to send;
+5. Optional: In “Response”, you can choose a message to be send;
 6. In “Flow ”, you can choose which flow will be started.
 
 
