--- a/en/triggers/07.06- Start a Flow After a Missed Call.md
+++ b/en/triggers/07.06- Start a Flow After a Missed Call.md
@@ -1,4 +1,6 @@
-**Use this trigger to start a flow after a missed call. To start a flow after a missed call:**
+**Use this trigger to start a flow after a missed call**. 
+
+**To start a flow after a missed call do as described below:**
 
 1. Go to the guide **“Triggers”** and click on the box **“Create a Trigger”**.
 
