--- a/en/triggers/07.09-Ignoring a Keyword in a Flow.md
+++ b/en/triggers/07.09-Ignoring a Keyword in a Flow.md
@@ -1,6 +1,8 @@
-When a contact sends a message that corresponds to a keyword that you defined to start flow, it will be automatically placed into the flow by default. This means that if contact was placed into a flow A and the user responded with a message containing a keyword that starts a flow B, it will leave the flow A and start the flow B. This is useful in situations that you want to permit that your contacts move between the flows using the keywords.
+When a contact sends a message that corresponds to a keyword set to launches a flow, he will be automatically placed into this flow by default. This means that if your contact is placed within a flow A and he sends a message containing a keyword that starts a flow B, he will be moved from flow A to flow B.
+This is useful in situations you want to permit your contacts to move between flows using  keywords. 
 
-If you want to keep your contacts in flow until they finish or expires, you can configure to ignore the keyword until your contacts have left the first flow.
+If you want to keep your contacts in a flow until they finish or it expires, you can configure your flow to ignore the keyword until your contacts have left the previous flow.
+
 
 **To say to a flow to ignore triggers and keywords:**
 
