--- a/en/triggers/07.05- Start a Flow After Receiving a Call.md
+++ b/en/triggers/07.05- Start a Flow After Receiving a Call.md
@@ -1,4 +1,6 @@
-**Use this trigger to start a flow after receiving a call. To start a flow after receiving a call:**
+**Use this trigger to start a flow after receiving a call.** 
+
+**To start a flow after a missed call do as described below:**
 
 1. Go to the guide **“Triggers”** and click on the box **“Create a Trigger”**;
 
