--- a/en/triggers/07.08-Start a Flow After Receiving a Message Not Handled Elsewhere.md
+++ b/en/triggers/07.08-Start a Flow After Receiving a Message Not Handled Elsewhere.md
@@ -1,4 +1,4 @@
-Use this trigger to start a flow after receiving an uncaught message (the message is not handled in elsewhere for other triggers). This trigger can be used for messages that weren't handled for an informative flow that explain your service and conduct it for flow.
+If your contact is not active in any of your flows and he send any message to you, you can use this kind of trigger to capture this message and start any flow you want. It means you can start a flow after receiving a not handled message from your contact. 
 
 **To create it:**
 
