--- a/en/expressions/09.01.1-Expressions.md
+++ b/en/expressions/09.01.1-Expressions.md
@@ -11,16 +11,16 @@ For example, the Wait for response below will generate a flow variable flow name
 
 Expressions are modeled within specific syntaxes and starting with an "@" will load a list of 10 possibilities, you can advance to complex expressions by typing "@(" - called *Functions*.
 
-`@contact` → The name of the contact.
-`@results` → The results for the current run.
-`@fields` → The custom field for the contact.
-`@input` → The most rescent input.
-`@urns` → The URNs for the contact.
-`@run` → A run in this flow.
-`@child` → Run details collected in a child flow, if any.
-`@parent` → Run details collected in a parent flow, if any.
-`@webhook` → The parsed JSON payload of the last webhook call.
-`@trigger` → A trigger that initiated a session.
+`@contact` → The name of the contact. </br>
+`@results` → The results for the current run. </br>
+`@fields` → The custom field for the contact. </br>
+`@input` → The most rescent input. </br>
+`@urns` → The URNs for the contact. </br>
+`@run` → A run in this flow. </br>
+`@child` → Run details collected in a child flow, if any. </br>
+`@parent` → Run details collected in a parent flow, if any. </br>
+`@webhook` → The parsed JSON payload of the last webhook call. </br>
+`@trigger` → A trigger that initiated a session. </br>
 
 ## Expression's types
 
