--- a/en/triggers/07.01-Introduction to Triggers.md
+++ b/en/triggers/07.01-Introduction to Triggers.md
@@ -1,10 +1,16 @@
-Triggers allow you to control your flows, defining when and how they will be started. A flow can be triggered by a contact when he starts a conversation or after a missed call. Learn more about triggers using your documentation.
+Triggers allow you to control your flows, defining when and how they will be started. A flow can be triggered by a contact when starting a conversation and a lot more. Let's talk about the most common trigger type, **Keywords**.
 
-- In “keyword” you can define a word to works as a keyword;
-- In “trigger when”, you will choose between two options: 
-- The message starts with the keyword: If the phrase typed for the user starts with a keyword, the chosen flow will trigger;
-- The message contains only the keyword: The chosen flow will trigger if the user type just the keyword;
-- In “Flow”, is defined the flow that will start when you use the keyword;
-- In “Only groups”, is possible to apply the rules from this trigger to specific contact groups, just leave the blank space if you want to apply this rule to all user.
+Click **Create a message keyword that launches a flow** to start.
 
-Now, you can use it, for example, start a welcoming flow, so when a  user sends “hi”, he will be registered into the organization and become a contact, as the picture:
+![](img/triggers/TriggersKeyword01.png)
+
+- On *keyword* you will set the word to work as a trigger;
+- At *trigger when* you will choose between: 
+  - *Message starts with the keyword* - If the phrase typed for the user starts with the keyword, the chosen flow will take action;
+  - *Message contains only the keyword* - The chosen flow will take action if the user types only the sigle keyword set;
+- On *Flow* is set the flow to be started;
+- On *Only groups*, is possible to apply the rules from this trigger to specific contact's groups, just leave the blank space if you want to apply this rule to everyone.
+
+An usecase is starting a welcome flow when a person sends "hello" to be registered into the organization and become a contact, as the picture:
+
+![](img/triggers/TriggersKeyword02.png)
