texts and tabs fixing

--- a/en/triggers/07.01-Introduction to Triggers.md
+++ b/en/triggers/07.01-Introduction to Triggers.md
@@ -1,13 +1,13 @@
 Triggers allow you to control your flows, defining when and how they will be started. A flow can be triggered by a contact when starting a conversation and a lot more. Let's talk about the most common trigger type, **Keywords**.
 
-Click **Create a message keyword that launches a flow** to start.
+Click *Create a message keyword that launches a flow* to start.
 
 ![](/img/triggers/TriggersKeyword01.png)
 
 - On *keyword* you will set the word to work as a trigger;
 - At *trigger when* you will choose between: 
   - *Message starts with the keyword* - If the phrase typed for the user starts with the keyword, the chosen flow will take action;
-  - *Message contains only the keyword* - The chosen flow will take action if the user types only the sigle keyword set;
+  - *Message contains only the keyword* - The chosen flow will take action if the user types only the single keyword set;
 - On *Flow* is set the flow to be started;
 - On *Only groups*, is possible to apply the rules from this trigger to specific contact's groups, just leave the blank space if you want to apply this rule to everyone.
 
