--- a/en/triggers/07.04- Start a Flow in the Future or on a Schedule.md
+++ b/en/triggers/07.04- Start a Flow in the Future or on a Schedule.md
@@ -1,12 +1,12 @@
 Use this trigger to schedule a flow in a moment in the future, repeat it daily, weekly or monthly.
 
-**To start flow in the future or on a schedule:**
+## To start a flow in the future or on a schedule
 
-1. Go to the guide *“Triggers”* and click on the box *“Create a Trigger”*;
+1. Go to the guide *Triggers* and click on the box *Create a Trigger*;
 
 ![](/img/triggers/triggers1.png)
 
-2. Click on the button *“Start a Flow in the Future or on a Schedule”*;
+2. Click on the button *Start a Flow in the Future or on a Schedule*;
 
 ![](/img/triggers/triggers7.png)
 
@@ -14,6 +14,6 @@ Use this trigger to schedule a flow in a moment in the future, repeat it daily, 
 
 4. *Optional:* You can opt to repeat the flow daily, weekly or monthly;
 
-5. Click on the box *“Create Trigger”*.
+5. Click on the box *Create Trigger*.
 
 ![](/img/triggers/triggers6.png)
