--- a/en/triggers/07.08-Start a Flow After Receiving a Message Not Handled Elsewhere.md
+++ b/en/triggers/07.08-Start a Flow After Receiving a Message Not Handled Elsewhere.md
@@ -1,19 +1,19 @@
-If your contact is not active in any of your flows and he send any message to you, you can use this kind of trigger to capture this message and start any flow you want. It means you can start a flow after receiving a not handled message from your contact. 
+If the contact is not active in any flow and sends any message, this trigger can be used to capture this message and start any flow you want. It means you can start a flow after receiving a not handled message from your contact. 
 
-**To create it:**
+## To start a flow for unhandled messages
 
-1. Go to the guide **“Triggers”** and click on the box **“Create a Trigger”**.
+1. Go to the guide *Triggers* and click on the box *Create a Trigger*.
 
 ![](/img/triggers/triggers1.png)
 
-2. Click on the **“Start a flow after receiving a message not handled elsewhere”** button.
+2. Click on the *Start a flow after receiving a message not handled elsewhere* button.
 
 ![](/img/triggers/triggers16.png)
 
-3. In **“Flow”**, choose the flow that you want to start.
+3. In *Flow*, choose the flow that you want to start.
 
-4. In **“Only Groups”** you can choose the group(s) that the trigger will be applied, if you leave the field empty, the trigger will be applied to all contacts.
+4. In *Only Groups* you can choose the group(s) that the trigger will be applied, if you leave the field empty, the trigger will be applied to all contacts.
 
-5. Click on the **“Create Trigger”**.
+5. Click on the *Create Trigger*.
 
 ![](/img/triggers/triggers17.png)
