fixed expression image path, text ident and updated content

--- a/en/expressions/09.01-Expressions and Variables Introduction.md
+++ b/en/expressions/09.01-Expressions and Variables Introduction.md
@@ -1,35 +1,27 @@
-## Variables ##
-By standard, a flow containing RuleSets contains a collection of resulting variables for each RuleSet evaluation. For example, the RuleSet below will produce a variable flow @flow.phonenumber when the contact answers it and passes to the next step.
+## Expressions and variables intro
 
-![](/img/expressions/expression2.png)
+By now you may know that building a flow is connecting a collection of actions altogether and it intends to gather some result. That's what variables are for, store flow's step values and persist data.
+For example, the *Wait for response* below will generate a flow variable named *name* as the contact reply to it. Additionally the variable will used to save the data into *Name* contact's field.
 
-Each variable starts with the “@” symbol, that unleashes a drop-down menu appointed automatically containing a complete list of available variables.
+![](/img/expressions/ExpressionIntroSample.png)
 
-![](/img/expressions/expression3.png)
+*Variables* and *Expressions* starts with the `@` symbol. Expressions are modeled within specific syntaxes and typing `@` will load a list of 10 possibilities. You can advance to more complex expressions by typing `@(` - called *Functions*.
 
-After to select the type of variable, press “enter” and will appear a list of all available variables for each variable type. On the example below, type @flow and press “Enter”. On the example below, typing @flow will appear the value flows list collected on the current flow for each RuleSet.
+![](/img/expressions/ExpressionIntroList01.png)
 
-![](/img/expressions/expression4.png)
+After selecting the *Expression*, it's possible to explore its advanced features too. Select one and hitting *Enter* or *Tab* will load a list of all available *functions* for each expression type. On the example below you can see that `@contact` has a lot more options than just showing the contact's name:
 
-Press “Enter” again, so you will be allowed to specify metadados associated by the platform to each value. In the following example:
+![](/img/expressions/ExpressionIntroList02.png)
 
-Category returns the category that the contacts answer was located;
+When using flow's expressions it's also possible to specify the metadata you're aiming. See the following example:
 
-Text returns the complete response answer from a contact;
+`@results.gender.category` returns the category that the contacts answer was located;
 
-Time returns the time when the contact message was received by the channel.
+`@results.gender.value` returns the complete response answer from a contact;
 
-![](/img/expressions/expression5.png)
+`@results.gender.input` returns the time when the contact message was received by the channel.
 
-Each variable is replaced with the represented value when contact is active on the flow. If you insert an invalid variable, the message will contain the variable name.
+![](/img/expressions/ExpressionIntroList03.png)
 
-Expressions
-Use expressions to build expressions including arithmetic, text, logical, date & time functions, and more. To see the list of functions you just need to type @() on the message field.
-
-![](/img/expressions/expression6.png)
-
-When you choose a function, you will see a dialog box with the name of the function, an exemple and a summary.
-
-![](/img/expressions/expression7.png)
-
+Each expression represents the value when contact is active on the flow. If you type an incorrect expression, the message will show itself.
 
