--- a/en/expressions/09.01.1-Expressions.md
+++ b/en/expressions/09.01.1-Expressions.md
@@ -1,15 +1,15 @@
-# Expression Syntax
+# Expression Syntaxes
 Understand what is it and how to use available functions and expressions.
 
 ## Using variables
-By now you may know that building a flow is connecting a collection of actions altogether and it intend to gather some result. That's what variables are for, store flow's steps values.
+By now you may know that building a flow is connecting a collection of actions altogether and it intends to gather some result. That's what variables are for, store flow's steps values.
 For example, the Wait for response below will generate a flow variable flow named *name* as the contact reply to it.
 
 ![](/img/expressions/expression_variables.png)
 
 ## What are expressions, functions and operators.
 
-Expressions are modeled within specific syntaxes and starting with an "@" will load a list of 10 possibilities, you can advance to complex expressions by typing "@(" - called *Functions*.
+Expressions are modeled within specific syntaxes and starting with an `@` will load a list of 10 possibilities, you can advance to complex expressions by typing `@(` - called *Functions*.
 
 `@contact` → The name of the contact. </br>
 `@results` → The results for the current run. </br>
@@ -150,7 +150,7 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
 ```
 ### **exponent**
 
-  Raises a number to the power of a another number.
+  Raises a number to the power of another number.
 ```
 @(2 ^ 8) → 256
 ```
@@ -296,7 +296,7 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
 ```
 ### **count(value)**
   
-  Returns the number of items in the given array or properties on an object.
+  Returns the number of items in the given array or the properties of an object.
 
   It will return an error if it is passed an item which isn't countable.
 ```
@@ -441,7 +441,7 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
   
   Formats `date` as text according to the given `format`.
 
-  If `format` is not specified then the environment's default format is used. The format string can consist of the following characters. The characters ` `,`:`,`,`,`T`,`-` and `_` are ignored. Any other character is an error.
+  If `format` is not specified then the environment's default format is used. The format string can consist of the following characters. Characters like *space*, `:`, `,`, `T`, `-` and `_` are ignored. Any other character is an error.
 
   * `YY` - last two digits of year 0-99
   * `YYYY` - four digits of year 0000-9999
@@ -461,7 +461,7 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
   
   Formats `datetime` as text according to the given `format`.
 
-  If `format` is not specified then the environment's default format is used. The format string can consist of the following characters. The characters ` `,`:`,`,`,`T`,`-` and `_` are ignored. Any other character is an error.
+  If `format` is not specified then the environment's default format is used. The format string can consist of the following characters. Characters like *space*, `:`, `,`, `T`, `-` and `_` are ignored. Any other character is an error.
 
   * `YY` - last two digits of year 0-99
   * `YYYY` - four digits of year 0000-9999
@@ -518,7 +518,7 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
   
   Formats `time` as text according to the given `format`.
 
-  If `format` is not specified then the environment's default format is used. The format string can consist of the following characters. The characters ` `,`:`,`,`,`T`,`-` and `_` are ignored. Any other character is an error.
+  If `format` is not specified then the environment's default format is used. The format string can consist of the following characters. Characters like *space*, `:`, `,`, `T`, `-` and `_` are ignored. Any other character is an error.
 
   * `h` - hour of the day 1-12
   * `hh` - hour of the day 01-12
@@ -661,7 +661,7 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
   
   Parses `text` into a date using the given `format`.
 
-  The format string can consist of the following characters. The characters ` `,`:`,`,`,`T`,`-` and `_` are ignored. Any other character is an error.
+  The format string can consist of the following characters. Characters like *space*, `:`, `,`, `T`, `-` and `_` are ignored. Any other character is an error.
 
   * `YY` - last two digits of year 0-99
   * `YYYY` - four digits of year 0000-9999
@@ -707,9 +707,9 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
 ```
 ### **parse_time(text, format)**
   
-  Parses `text` into a time using the given `format`.
+  Parses `text` into `time` using the given `format`.
 
-  The format string can consist of the following characters. The characters ` `,`:`,`,`,`T`,`-` and `_` are ignored. Any other character is an error.
+  The format string can consist of the following characters. Characters like *space*, `:`, `,`, `T`, `-` and `_` are ignored. Any other character is an error.
 
   * `h` - hour of the day 1-12
   * `hh` - hour of the day 01-12
@@ -982,7 +982,7 @@ Expressions are modeled within specific syntaxes and starting with an "@" will l
 
   Returns the week number (1-54) of `date`.
 
-  The week is considered to start on Sunday and week containing Jan 1st is week number 1.
+  The week is considered to start on Sunday and Jan 1st is week number 1.
 
 ```
 @(week_number("2019-01-01")) → 1
