--- a/en/expressions/09.03-Logical Expressions.md
+++ b/en/expressions/09.03-Logical Expressions.md
@@ -1,13 +1,15 @@
-The logical expressions is an expression that evaluates as TRUE or FALSE. This expression can use some operators: 
-- Equals (=);
-- Different (<>);
-- More than (>);
-- More or equal (>=);
-- Lesser (<);
-- and lesser or equals (<=).
+The logical expressions evaluates within `TRUE` or `FALSE` using below operators:
+
+- Equals `=`
+- Different `!=`
+- More than `>`
+- Equal or more than `>=`
+- Lesser than `<`
+- Equal or lesser than `<=`
 
 **For example:**
 
-- @(Contact.age> 18)
+- @(contact.age > 18)
+- @((contact.age - result.born) >= 2000)
 
-Notice that when you compare the text values, equals (=) and different (<>), the operators don't differ Upper and Lower case.
+Notice that when you can also compare string values using equals `=` or different `!=`, the operators don't differ from Upper or Lower case.
